Debug bill paths
